--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -2,5 +2,9 @@
   box-sizing: border-box
 
 body
-  font-family: 'Mulish', sans-serif  
+  font-family: 'Mulish', sans-serif
+  color: $text-color  
   
+.container
+  max-width: 1110px
+  margin: auto  
