--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -9,6 +9,24 @@
   &__search
     margin-right: auto
     margin-left: 108px
+  &-bottom
+    background-color: $dark
+  &-menu
+    list-style-type: none
+    margin: 0
+    padding: 31px 0
+    display: flex
+    align-items: center
+    justify-content: space-between
+    color: $light
+    text-transform: uppercase
+    &__link
+       color: inherit
+       text-decoration: none
+       font-size: 14px
+       line-height: 18px
+.logo 
+  width: 177px
 .search
     display: flex
     position: relative
