--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,6 +4,8 @@
 @media (max-width: 992px)
   .container
     max-width: 700px
+  .logo
+    max-width: 132px
   .navbar
     &__top
       padding-top: 30px
@@ -15,9 +17,30 @@
       padding-top: 22px
       padding-bottom: 22px
       &__link
-         font-size: 12px
-         line-height: 15px
+       font-size: 12px
+       line-height: 15px
 @media (max-width: 768px)
   .container
     max-width: 576px
     width: 92%
+  .navbar
+    &__search, &-menu, &__user
+       display: none
+  .menu
+    &-button
+      display: flex
+      width: 16px
+      height: 11px
+      align-items: center
+      justify-content: space-between
+      flex-direction: column
+      border: none
+      background-color: #fff
+      cursor: pointer
+      &__line
+        width: 16px
+        height: 1px
+        background-color: $text-color
+@media (max-width: 576px)
+  .logo
+   width: 99px
