--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -6,9 +6,12 @@
     justify-content: space-between
     padding-top: 40px
     padding-bottom: 40px
+    &__menu-button
+       display: none
   &__search
     margin-right: auto
     margin-left: 108px
+       
   &-bottom
     background-color: $dark
   &-menu
