--- a/css/style.css
+++ b/css/style.css
@@ -471,7 +471,6 @@ template {
   }
   .navbar__search {
     margin-left: auto;
-    max-width: 340px;
   }
   .navbar-menu {
     padding-top: 22px;
@@ -480,6 +479,9 @@ template {
   .navbar-menu__link {
     font-size: 12px;
     line-height: 15px;
+  }
+  .navbar .search__input {
+    width: 340px;
   }
 }
 
@@ -495,6 +497,7 @@ template {
     display: flex;
     width: 16px;
     height: 11px;
+    padding: 0;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
