--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -5,6 +5,7 @@
     display: flex
     align-items: center
     justify-content: space-between
+    margin-bottom: 20px
     &__offer
       margin-left: 14px
       margin-top: 4px
@@ -23,26 +24,64 @@
   &-description
     font-size: 12px;
     line-height: 15px;
-  .stars
-    flex-basis: 100%
-  .offer
-    font-size: 10px;
-    line-height: 13px;
-    padding: 4px 9px
-    background-color: $primary
-    border-radius: 3px
-    color: $light
-  .rating
-    max-width: 65px
-    min-height: 45px
-    text-align: center
-    color: $light
-    background-color: $primary
-    border-radius: 4px
-    &__text
-      font-size: 8px;
-      line-height: 10px;
-    &__counter
-      font-size: 14px;
-      line-height: 18px;
-      
+  &-grid
+
+.stars
+  flex-basis: 100%
+.offer
+  font-size: 10px;
+  line-height: 13px;
+  padding: 4px 9px
+  background-color: $primary
+  border-radius: 3px
+  color: $light
+.rating
+  max-width: 65px
+  min-height: 45px
+  text-align: center
+  color: $light
+  background-color: $primary
+  border-radius: 4px
+  &__text
+    font-size: 8px;
+    line-height: 10px;
+  &__counter
+    font-size: 14px;
+    line-height: 18px;
+.slider
+  width: 728px
+.swiper
+  width: 100%
+  height: 450px
+  position: relative
+  border-radius: 8px
+  &::after
+    content: ''
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0
+    left: 0
+    bottom: 0
+    right: 0
+    background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+    z-index: 98
+  &-button
+    top: 50%
+    width: 30px
+    height: 30px
+    border: none
+    z-index: 99
+    position: absolute
+    transform: translateY(-50%)
+    cursor: pointer
+    background-repeat: no-repeat
+    background-position: center
+    background-size: 10px
+    background-color: transparent
+    &--next
+      right: 18px
+      background-image: url(../img/arrow-next.svg)
+    &--prev
+      left: 18px
+      background-image: url(../img/arrow-prev.svg)
