--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -24,6 +24,13 @@
   &-description
     font-size: 12px;
     line-height: 15px;
+  &-grid
+    display: flex
+    justify-content: space-between
+  &-right
+    display: flex
+    flex-direction: column
+    justify-content: space-between
 .stars
   flex-basis: 100%
 .offer
@@ -83,3 +90,80 @@
     &--prev
       left: 18px
       background-image: url(../img/arrow-prev.svg)
+.booking
+  background-color: $dark
+  color: $light
+  border-radius: 8px;
+  width: 350px;
+  min-height: 210px;
+  padding: 28px
+  &__info
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 9px
+  &__price
+    display: flex
+    flex-direction: column
+  &__start
+    font-weight: normal;
+    font-size: 10px;
+    line-height: 14px;
+  &__pricetag
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 33px;
+  &__per-room
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+  &__room
+    margin-top: 4px
+  &__text
+    display: flex
+    align-items: center
+    justify-content: space-between
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    margin-bottom: 8px
+  &__description
+    margin-left: 9px
+  &__call-center
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 17px
+  &__heading
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+  &__number
+    display: flex
+    align-items: center
+    justify-content: space-between
+    text-decoration: none
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    color: inherit
+  &__numb
+    margin-left: 8px
+  &__button
+    background-color: $primary
+    color: $light
+    width: 100%
+    border: none
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19px;
+    border-radius: 4px;
+    min-height: 45px
+    cursor: pointer
+.map
+  width: 347px
+  height: 213px
+  background: #000
+  border-radius: 4px
+
+    
