create:  media rules for hotel section

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,14 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .slider
+    max-width: 590px
+  .swiper
+    &-slide
+      &__img
+        width: 100%
+        height: 100%
+        object-fit: cover
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -20,7 +28,20 @@
        line-height: 15px
     .search
       &__input
-         width: 340px
+        width: 340px
+  .hotel
+    &-grid
+      flex-direction: column
+    &__slider
+      margin-bottom: 30px
+    &-right
+      flex-direction: row
+  .slider
+    max-width: 100%
+  .booking
+    width: 340px
+  .map
+    width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -62,6 +83,20 @@
       &__offer
         order: -1
         margin-left: 0
+    &-right
+      flex-direction: column
+      min-height: 450px
+  .slider
+   height: 350px
+  .booking
+    width: 100%
+  .map
+    width: 100%
 @media (max-width: 576px)
   .logo
    width: 99px
+  .slider
+    height: 250px
+  .hotel
+    &-slider
+      margin-bottom: 20px
