--- a/css/style.css
+++ b/css/style.css
@@ -563,11 +563,12 @@ template {
 
 .slider {
   width: 728px;
+  height: 450px;
 }
 
 .swiper {
   width: 100%;
-  height: 450px;
+  height: 100%;
   position: relative;
   border-radius: 8px;
 }
@@ -712,12 +713,21 @@ template {
   width: 347px;
   height: 213px;
   background: #000;
-  border-radius: 4px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
+  }
+  .slider {
+    max-width: 590px;
+  }
+  .swiper-slide__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
@@ -744,6 +754,24 @@ template {
     line-height: 15px;
   }
   .navbar .search__input {
+    width: 340px;
+  }
+  .hotel-grid {
+    flex-direction: column;
+  }
+  .hotel__slider {
+    margin-bottom: 30px;
+  }
+  .hotel-right {
+    flex-direction: row;
+  }
+  .slider {
+    max-width: 100%;
+  }
+  .booking {
+    width: 340px;
+  }
+  .map {
     width: 340px;
   }
 }
@@ -796,11 +824,30 @@ template {
     order: -1;
     margin-left: 0;
   }
+  .hotel-right {
+    flex-direction: column;
+    min-height: 450px;
+  }
+  .slider {
+    height: 350px;
+  }
+  .booking {
+    width: 100%;
+  }
+  .map {
+    width: 100%;
+  }
 }
 
 @media (max-width: 576px) {
   .logo {
     width: 99px;
+  }
+  .slider {
+    height: 250px;
+  }
+  .hotel-slider {
+    margin-bottom: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
