--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -55,9 +55,10 @@
     line-height: 18px;
 .slider
   width: 728px
+  height: 450px
 .swiper
   width: 100%
-  height: 450px
+  height: 100%
   position: relative
   border-radius: 8px
   &::after
@@ -164,6 +165,7 @@
   width: 347px
   height: 213px
   background: #000
-  border-radius: 4px
+  border-radius: 10px
+  overflow: hidden
 
     
