--- a/css/style.css
+++ b/css/style.css
@@ -717,6 +717,90 @@ template {
   overflow: hidden;
 }
 
+.newsletter {
+  padding: 98px 0 87px 0;
+  background-image: url(../img/newsletter-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.newsletter::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(10, 34, 61, 0.8);
+}
+
+.newsletter__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  max-width: 731px;
+  margin: auto;
+}
+
+.newsletter__title {
+  color: #fff;
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.newsletter__title-strong {
+  display: block;
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 45px;
+  text-transform: uppercase;
+}
+
+.subscribe {
+  position: relative;
+  width: 355px;
+  height: 55px;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.subscribe__input {
+  position: absolute;
+  width: 100%;
+  padding-left: 33px;
+  padding-top: 19px;
+  padding-bottom: 18px;
+  padding-right: 75px;
+  border: none;
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.subscribe__button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding-top: 19px;
+  padding-bottom: 18px;
+  border: none;
+  background-color: #EC1F46;
+  color: #fff;
+  min-width: 65px;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -732,7 +816,8 @@ template {
 }
 
 @media (max-width: 992px) {
-  .container {
+  .container,
+  .newsletter__wrapper {
     max-width: 700px;
   }
   .logo {
@@ -837,6 +922,12 @@ template {
   .map {
     width: 100%;
   }
+  .newsletter__wrapper {
+    flex-direction: column;
+    max-width: 576px;
+    width: 92%;
+    align-items: flex-start;
+  }
 }
 
 @media (max-width: 576px) {
@@ -848,6 +939,27 @@ template {
   }
   .hotel-slider {
     margin-bottom: 20px;
+  }
+  .newsletter {
+    padding: 76px 0 83px 0;
+  }
+  .newsletter__title {
+    margin-bottom: 37px;
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .newsletter__title-strong {
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 38px;
+  }
+  .subscribe {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
