--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,7 +10,8 @@
         height: 100%
         object-fit: cover
 @media (max-width: 992px)
-  .container
+  .container,
+  .newsletter__wrapper
     max-width: 700px
   .logo
     max-width: 132px
@@ -24,8 +25,8 @@
       padding-top: 22px
       padding-bottom: 22px
       &__link
-       font-size: 12px
-       line-height: 15px
+        font-size: 12px
+        line-height: 15px
     .search
       &__input
         width: 340px
@@ -48,7 +49,7 @@
     width: 92%
   .navbar
     &__search, &-menu, &__user
-       display: none
+      display: none
   .menu
     &-button
       display: flex
@@ -87,16 +88,40 @@
       flex-direction: column
       min-height: 450px
   .slider
-   height: 350px
+    height: 350px
   .booking
     width: 100%
   .map
     width: 100%
+  .newsletter
+    &__wrapper
+      flex-direction: column
+      max-width: 576px
+      width: 92%
+      align-items: flex-start
 @media (max-width: 576px)
   .logo
-   width: 99px
+    width: 99px
   .slider
     height: 250px
   .hotel
     &-slider
       margin-bottom: 20px
+  .newsletter
+    padding: 76px 0 83px 0
+    &__title
+      margin-bottom: 37px
+      font-family: Mulish
+      font-style: normal
+      font-weight: 300
+      font-size: 20px
+      line-height: 25px
+      &-strong
+        font-family: Mulish
+        font-style: normal
+        font-weight: 600
+        font-size: 30px
+        line-height: 38px
+
+  .subscribe
+    width: 100%
