--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -15,15 +15,15 @@
     &__description
       margin: 5px 0
   &-name
-    font-size: 24px;
-    line-height: 30px;
+    font-size: 24px
+    line-height: 30px
   &-wrapper
     display: flex
     flex-wrap: wrap
     align-items: center
   &-description
-    font-size: 12px;
-    line-height: 15px;
+    font-size: 12px
+    line-height: 15px
   &-grid
     display: flex
     justify-content: space-between
@@ -31,11 +31,51 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+  &-slider
+    width: 728px
+    height: 450px
+    &__button
+      top: 50%
+      width: 30px
+      height: 30px
+      border: none
+      z-index: 99
+      position: absolute
+      transform: translateY(-50%)
+      cursor: pointer
+      background-repeat: no-repeat
+      background-position: center
+      background-size: 10px
+      background-color: transparent
+      &--next
+        right: 18px
+        background-image: url(../img/arrow-next.svg)
+      &--prev
+        left: 18px
+        background-image: url(../img/arrow-prev.svg)
+    &__item
+      position: relative
+      border-radius: 8px
+      overflow: hidden
+      width: 100%
+      height: 100%
+      &::after
+        content: ''
+        position: absolute
+        width: 100%
+        height: 100%
+        top: 0
+        left: 0
+        bottom: 0
+        right: 0
+        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+        z-index: 98
+
 .stars
   flex-basis: 100%
 .offer
-  font-size: 10px;
-  line-height: 13px;
+  font-size: 10px
+  line-height: 13px
   padding: 4px 9px
   background-color: $primary
   border-radius: 3px
@@ -48,55 +88,17 @@
   background-color: $primary
   border-radius: 4px
   &__text
-    font-size: 8px;
-    line-height: 10px;
+    font-size: 8px
+    line-height: 10px
   &__counter
-    font-size: 14px;
-    line-height: 18px;
-.slider
-  width: 728px
-  height: 450px
-.swiper
-  width: 100%
-  height: 100%
-  position: relative
-  border-radius: 8px
-  &::after
-    content: ''
-    position: absolute
-    width: 100%
-    height: 100%
-    top: 0
-    left: 0
-    bottom: 0
-    right: 0
-    background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-    z-index: 98
-  &-button
-    top: 50%
-    width: 30px
-    height: 30px
-    border: none
-    z-index: 99
-    position: absolute
-    transform: translateY(-50%)
-    cursor: pointer
-    background-repeat: no-repeat
-    background-position: center
-    background-size: 10px
-    background-color: transparent
-    &--next
-      right: 18px
-      background-image: url(../img/arrow-next.svg)
-    &--prev
-      left: 18px
-      background-image: url(../img/arrow-prev.svg)
+    font-size: 14px
+    line-height: 18px
 .booking
   background-color: $dark
   color: $light
-  border-radius: 8px;
-  width: 350px;
-  min-height: 210px;
+  border-radius: 8px
+  width: 350px
+  min-height: 210px
   padding: 28px
   &__info
     display: flex
@@ -107,26 +109,26 @@
     display: flex
     flex-direction: column
   &__start
-    font-weight: normal;
-    font-size: 10px;
-    line-height: 14px;
+    font-weight: normal
+    font-size: 10px
+    line-height: 14px
   &__pricetag
-    font-weight: 800;
-    font-size: 24px;
-    line-height: 33px;
+    font-weight: 800
+    font-size: 24px
+    line-height: 33px
   &__per-room
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 16px;
+    font-weight: normal
+    font-size: 12px
+    line-height: 16px
   &__room
     margin-top: 4px
   &__text
     display: flex
     align-items: center
     justify-content: space-between
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 16px;
+    font-weight: normal
+    font-size: 12px
+    line-height: 16px
     margin-bottom: 8px
   &__description
     margin-left: 9px
@@ -136,17 +138,17 @@
     justify-content: space-between
     margin-bottom: 17px
   &__heading
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 25px;
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
   &__number
     display: flex
     align-items: center
     justify-content: space-between
     text-decoration: none
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 25px;
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
     color: inherit
   &__numb
     margin-left: 8px
@@ -155,10 +157,10 @@
     color: $light
     width: 100%
     border: none
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 19px;
-    border-radius: 4px;
+    font-weight: 600
+    font-size: 14px
+    line-height: 19px
+    border-radius: 4px
     min-height: 45px
     cursor: pointer
 .map
@@ -167,5 +169,3 @@
   background: #000
   border-radius: 10px
   overflow: hidden
-
-    
