--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -37,12 +37,21 @@
       margin-bottom: 30px
     &-right
       flex-direction: row
-  .slider
-    max-width: 100%
   .booking
     width: 340px
   .map
     width: 340px
+  .reviews
+    &__title
+      font-family: Mulish
+      font-style: normal
+      font-weight: bold
+      font-size: 30px
+      line-height: 38px
+    &-slider
+      &-item
+        max-width: 580px
+
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -87,8 +96,7 @@
     &-right
       flex-direction: column
       min-height: 450px
-  .slider
-    height: 350px
+
   .booking
     width: 100%
   .map
@@ -99,6 +107,14 @@
       max-width: 576px
       width: 92%
       align-items: flex-start
+  .reviews
+    &-slider
+      &__item
+        padding: 0 30px 30px
+        &:before, &::after
+          display: none
+      &__button
+        top: 45px
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -122,6 +138,12 @@
         font-weight: 600
         font-size: 30px
         line-height: 38px
-
   .subscribe
     width: 100%
+  .reviews
+    &__title
+      font-family: Mulish
+      font-style: normal
+      font-weight: bold
+      font-size: 18px
+      line-height: 23px
