--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -32,8 +32,10 @@
     flex-direction: column
     justify-content: space-between
   &-slider
-    width: 728px
-    height: 450px
+    max-width: 728px
+    width: 100%
+    margin-bottom: 20px
+    margin-right: 20px
     &__button
       top: 50%
       width: 30px
