--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -9,6 +9,9 @@
         width: 100%
         height: 100%
         object-fit: cover
+  .card
+    width: 230px
+    height: 230px
 @media (max-width: 992px)
   .container,
   .newsletter__wrapper
@@ -51,6 +54,14 @@
     &-slider
       &-item
         max-width: 580px
+  .activities
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px
+  .card
+    width: 340px
+    height: 255px
 
 @media (max-width: 768px)
   .container
@@ -96,7 +107,6 @@
     &-right
       flex-direction: column
       min-height: 450px
-
   .booking
     width: 100%
   .map
@@ -115,6 +125,12 @@
           display: none
       &__button
         top: 45px
+  .activities
+    padding-top: 40px
+    padding-bottom: 60px
+  .card
+    width: 49%
+    height: 255px
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -147,3 +163,5 @@
       font-weight: bold
       font-size: 18px
       line-height: 23px
+  .card
+    width: 100%
